@@ -136,6 +136,9 @@ BUGFIXES:
   ZOOKEEPER-1596. Zab1_0Test should ensure that the file is closed
   (Enis Soztutar via phunt)
 
+  ZOOKEEPER-1799. SaslAuthFailDesignatedClientTest.testAuth fails
+   frequently on SUSE (Jeffrey Zhong via phunt)
+
 IMPROVEMENTS:
 
   ZOOKEEPER-1389. it would be nice if start-foreground used exec $JAVA
